# bigfoot

./: .gitignore
bf_driver/: CMakeLists.txt  package.xml
bf_driver/config/: default.yaml
bf_driver/include/bf_driver/: msg_data_packer.h  msg_reader_session.h  msg_sender_session.h
bf_driver/include/crc/: crc.h
bf_driver/include/protocol/: protocol_common.h  protocol_msg_composer.h  protocol_msg_format.h  protocol_msg_processor.h
bf_driver/include/ros_operation/: ros_publisher.h  ros_subscriber.h
bf_driver/include/vehicle/: vehicle_common.h
bf_driver/launch/: minimal.launch  ps4joy.launch  robocardriver.launch  teleop.launch  teleop_joy.launch  teleop_key.launch
bf_driver/params/: custom.yaml  xbox.config.yaml
bf_driver/src/: bf_driver_node.cpp  msg_data_packer.cpp  msg_reader_session.cpp  msg_sender_session.cpp
bf_driver/src/crc/: crc.cpp
bf_driver/src/protocol/: protocol_msg_composer.cpp  protocol_msg_processor.cpp
bf_driver/src/ros_operation/: ros_publisher.cpp  ros_subscriber.cpp
bf_localization/: CMakeLists.txt  package.xml
bf_localization/launch/: ekf_local.launch  nst.launch
bf_localization/params/: ekf_local.yaml
bf_navigation/: CMakeLists.txt  package.xml  param.tar
bf_navigation/RVIZ/: bf.rviz
bf_navigation/env-hooks/: 25.bf-navigation.sh.em
bf_navigation/launch/: amcl.launch  gmapping.launch  safety.launch
bf_navigation/launch/includes/: move_base.launch  move_base.launch.tar  move_base.launch.xml  teb_move_base.launch  velocity_smoother.launch.xml
bf_navigation/launch/includes/amcl/: amcl.launch.xml
bf_navigation/launch/includes/gmapping/: gmapping.launch.xml
bf_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  mux.yaml  navfn_global_planner_params.yaml  smoother.yaml  teb_local_planner_params.yaml
bf_navigation/param/omnidir/: costmap_common_params.yaml  teb_local_planner_params.yaml
bf_navigation/scripts/: circular_array.py  dynamic_plot.py  follow_the_route.py  go_to_specific_point_on_map.py  route.yaml  safety.py  take_photo_from_odometry.py  wall_follow.py
bigfoot/: CHANGELOG.rst  CMakeLists.txt  package.xml
configs/: 26-robot.rules  30-mti300-serial.rules
configs/RVIZ/: r_l_local.rviz
