<package>
  <name>bf_navigation</name>
  <version>0.3.0</version>
  <description>bf_navigation</description>
  <maintainer email="0xd1ma@gmail.com">0xd1ma</maintainer>
  <license>BSD</license>
  <author>0xd1ma</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>

  </export>
</package>
